--- a/stilus.css
+++ b/stilus.css
@@ -8,8 +8,11 @@ main{
     width: 80%;
     max-width: 1000px;
     margin: auto;
-    padding: 0px;
     background-color: rgb(255,255,230);
+    grid-template-areas: "h h"
+                        "n n "
+                        "as a"
+                        "f f";
 }
 header {
     grid-area: h;
@@ -19,19 +22,16 @@ header {
 nav {
     grid-area: n;
     height: 50px;
-    background-color: rgb(209, 21, 21);
+    background-color:#ff1a1a
 }
-nav ul{
-    grid-template-areas:"li li li" ;
-}
-nav li{
-    grid-area: li;
+nav ul li{
     border-top: 1px white solid;
     border-bottom: 1px white solid ;
     padding: 5px;
     list-style-type: none;
     color: white;
     font-weight: bold;
+    display:inline-block;
 }
 nav li:hover {
     background-color: green;
@@ -39,7 +39,8 @@ nav li:hover {
 nav li a{
     text-decoration: none;
 }
-article p{
+article {
+    grid-area: a;
     text-align: justify;
     font-size: 10px;
 }
@@ -48,12 +49,39 @@ article h1{
     color: rgba(#ff1a1a);
     font-family: Arial, Helvetica, sans-serif;
 }
+article input{
+    margin: auto;
+    padding-right: 15px;
+    width: 50px;
+}
+aside img{
+    max-width: 150px;
+    width: 100%;
+    display: block;
+}
+aside{
+    grid-area: as;
+}
+
+
+
+
+
+
+
+
 @media screen and (max-width:700px){
     main{
         width: 80%;
         margin: auto;
         background-color: rgb(255,255,230);
         display: grid;
+        grid-template-areas: "h "
+                            "n  "
+                            "a"
+                            "as"
+                            "f";
+    
     }
     aside img{
         display: inline;
